packages/rspack/tests/configCases/errors/entry-runtime-error/webpack.config.js
module.exports = {
	entry: {
		a1: "./a",
		b1: {
			runtime: "a1",
			import: "./b"
		}
	}
};
